Внесены нужные изменения